# aletheion-llm-v2

./: .gitignore  ARCHITECTURE.md  CITATION.cff  CLA.md  CLOUD_DEPLOY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  INVESTORS.md  LICENSE  LICENSE-COMMERCIAL.md  PRIOR_ART.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  train.ps1  train.sh
configs/: medium.yaml  small.yaml
configs/scaling/: 1.3b.yaml  10m.yaml  125m.yaml  13b.yaml  162b.yaml  1m.yaml  1m_full_mahalanobis_rtx4090.yaml  1m_real_geodesic_rtx4090.yaml  250b.yaml  30b.yaml  350m.yaml  350m_4xh100.yaml  350m_backbone_rtx4090.yaml  350m_epistemic_finetune.yaml  50m.yaml  (+16 more)
docs/: TRAINING_GUIDE.md  epistemic_foliation.md  epistemic_foliation_report.md  gpu_rental_costs.md
logs/: README.md
scripts/: combine_and_plot.py  deploy_5xh200_fp32.sh  deploy_cloud.sh  eval.sh  eval_baselines.py  eval_epistemic.py  eval_perplexity.py  extract_epistemic_vectors.py  foliation_analysis.py  generate_architecture_diagram.py  launch_finetune_4xh100.sh  launch_finetune_4xh200.sh  plot_eval.py  plot_foliation.py  plot_training.py  plot_training_v2.py  prepare_data.py  run_4phase_1m.sh  setup_and_train.py  sync_checkpoints.sh  test_curvature.py  train.sh  train_and_plot.py  train_distributed.py  voronoi_foliation.py
tests/: test_causal_state.py  test_consciousness.py  test_continual_learning.py  test_drm.py  test_eidos.py  test_epistemic.py  test_filosofia3.py  test_grounding.py  test_integration.py  test_metacognitive.py  test_model.py  test_mopsi.py  test_mpl.py  test_plasticity.py  test_vi.py
(+186 files in other folders)
